mcdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpromc
  labels:
    app: vpromc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpromc
  template:
    metadata:
      labels:
        app: vpromc
    spec:
      containers:
        - name: vpromc
          image: memcached
          ports:
            - name: vpromc-port
              containerPort: 11211

          readinessProbe:
            tcpSocket:
              port: 11211
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 11211
            initialDelaySeconds: 30
            periodSeconds: 20
