rmq-CIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
  ports:
    - ports: 15672
      targetPort: vpromq01-port
      protocol: TCP
  selector:
    app: vpromq01
  type: ClusterIP
